subprojects/swen430/src/test/resources/tests/invalid/DefiniteAssign_Invalid_19.while
real g(real x) {
    return x + 1.0;
}

real f() {
    return g(x + 1.0);
}
